--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   google_fonts: ^4.0.3
   device_preview: ^1.1.0
   flutter_otp_text_field: ^1.1.1
+  smooth_star_rating_null_safety: ^1.0.4+2
+  flutter_rating_bar: ^4.0.1
+
 
 dev_dependencies:
   flutter_test:
