--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   flutter_otp_text_field: ^1.1.1
   smooth_star_rating_null_safety: ^1.0.4+2
   flutter_rating_bar: ^4.0.1
+  table_calendar: ^3.0.8
+  syncfusion_flutter_calendar: ^21.1.38
+  flutter_calendar_carousel: ^2.4.1
   
 
 
