--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   table_calendar: ^3.0.8
   syncfusion_flutter_calendar: ^21.1.38
   flutter_calendar_carousel: ^2.4.1
+  image_stack: ^2.1.1
   
 
 
