--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   syncfusion_flutter_calendar: ^21.1.38
   flutter_calendar_carousel: ^2.4.1
   image_stack: ^2.1.1
+  http: any
   
 
 
