--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   flutter_svg: ^2.0.4
   google_fonts: ^4.0.3
-  http: ^1.0.0
+  http: any
   image_picker: ^0.8.7+5
   image_stack: ^2.1.1
   smooth_star_rating_null_safety: ^1.0.4+2
