--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   device_preview: ^1.1.0
+  file_picker: ^5.3.2
   flutter:
     sdk: flutter
   flutter_calendar_carousel: ^2.4.1
