--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,6 +34,16 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    splits {
+    abi {
+        enable true
+        reset()
+        include defaultConfig.externalNativeBuild.getCmake().getAbiFilters().toListString()
+        universalApk true
+    }
+}
+
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -47,11 +57,16 @@ android {
         applicationId "com.example.jusitfi_admin"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 19 
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+
+
     }
+
+    
+
 
     buildTypes {
         release {
@@ -61,6 +76,7 @@ android {
         }
     }
 }
+
 
 flutter {
     source '../..'
