--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,14 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   device_preview: ^1.1.0
+  dropdown_button2: ^1.0.0
   file_picker: ^5.3.2
   flutter:
     sdk: flutter
   flutter_calendar_carousel: ^2.4.1
   flutter_otp_text_field: ^1.1.1
   flutter_rating_bar: ^4.0.1
+  flutter_typeahead: ^4.6.2
   google_fonts: ^4.0.3
   http: any
   image_picker: ^0.8.7+5
