--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,16 +34,6 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    splits {
-    abi {
-        enable true
-        reset()
-        include defaultConfig.externalNativeBuild.getCmake().getAbiFilters().toListString()
-        universalApk true
-    }
-}
-
-
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -57,8 +47,8 @@ android {
         applicationId "com.example.jusitfi_admin"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion 19 
-        targetSdkVersion flutter.targetSdkVersion
+        minSdkVersion 23 
+        targetSdkVersion 31
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
 
