--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_calendar_carousel: ^2.4.1
+  flutter_dotenv: ^5.1.0
   flutter_otp_text_field: ^1.1.1
   flutter_rating_bar: ^4.0.1
   flutter_typeahead: ^4.6.2
@@ -47,6 +48,7 @@ dependencies:
   smooth_star_rating_null_safety: ^1.0.4+2
   syncfusion_flutter_calendar: ^21.1.38
   table_calendar: ^3.0.8
+  videosdk: ^1.1.4
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -69,6 +71,7 @@ flutter:
     - assets/category_icons/
     - assets/nav_icons/
     - assets/icons/
+    - lib/.env
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
