--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animated_splash_screen: ^1.3.0
   cupertino_icons: ^1.0.2
   device_preview: ^1.1.0
   dropdown_button2: ^1.0.0
@@ -38,6 +39,7 @@ dependencies:
   flutter_calendar_carousel: ^2.4.1
   flutter_otp_text_field: ^1.1.1
   flutter_rating_bar: ^4.0.1
+  flutter_screenutil: ^5.8.4
   flutter_typeahead: ^4.6.2
   google_fonts: ^4.0.3
   http: any
