--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   image_picker: ^0.8.7+5
   image_stack: ^2.1.1
   share_plus: ^7.0.2
+  shared_preferences: ^2.2.0
   smooth_star_rating_null_safety: ^1.0.4+2
   syncfusion_flutter_calendar: ^21.1.38
   table_calendar: ^3.0.8
