--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   syncfusion_flutter_calendar: ^21.1.38
   table_calendar: ^3.0.8
   videosdk: ^1.1.4
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
