--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   http: any
   image_picker: ^0.8.7+5
   image_stack: ^2.1.1
+  razorpay_flutter: ^1.3.5
   share_plus: ^7.0.2
   shared_preferences: ^2.2.0
   smooth_star_rating_null_safety: ^1.0.4+2
