--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   web_socket_channel: ^2.4.0
   flutter_list_view:
   swipe_to:
+  scroll_to_index:
 
 dev_dependencies:
   flutter_lints: ^2.0.0
