--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   videosdk: ^1.1.4
   web_socket_channel: ^2.4.0
   flutter_list_view:
+  jiffy: ^6.2.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
