--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
   web_socket_channel: ^2.4.0
   flutter_list_view:
   jiffy: ^6.2.1
+  agora_rtc_engine: ^6.2.2
+  permission_handler: ^11.0.0
+  agora_uikit: ^1.3.7
 
 dev_dependencies:
   flutter_lints: ^2.0.0
