--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   agora_rtc_engine: ^6.2.2
   permission_handler: ^11.0.0
   agora_uikit: ^1.3.7
+  delete_un_used_assets: ^1.0.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
