--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   flutter_screenutil: ^5.8.4
   flutter_typeahead: ^4.6.2
   google_fonts: ^4.0.3
-  http: any
+  http: ^1.1.0
   image_picker: ^0.8.7+5
   image_stack: ^2.1.1
   razorpay_flutter: ^1.3.5
