--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,9 +59,11 @@ dependencies:
   url_launcher: ^6.1.14
   jiffy: ^6.2.1
   #agora_rtc_engine: ^6.2.2
-  permission_handler: ^11.0.0
+  permission_handler: ^10.4.5
   #agora_uikit: ^1.3.7
   delete_un_used_assets: ^1.0.1
+  zego_uikit_signaling_plugin: ^2.5.2
+  zego_uikit_prebuilt_call: ^3.16.0 
 
 dev_dependencies:
   flutter_lints: ^2.0.0
