--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   delete_un_used_assets: ^1.0.1
   zego_uikit_signaling_plugin: ^2.5.2
   zego_uikit_prebuilt_call: ^3.16.0 
+  flutter_styled_toast: ^2.2.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
