--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   zego_uikit_signaling_plugin: ^2.5.2
   zego_uikit_prebuilt_call: ^3.16.0 
   flutter_styled_toast: ^2.2.1
+  dropdownfield2: ^1.0.7
+  dropdown_search: ^5.0.6
 
 dev_dependencies:
   flutter_lints: ^2.0.0
